--- a/index.html
+++ b/index.html
@@ -3,21 +3,63 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Mon site web</title>
-  <!-- Lien vers le fichier CSS de Bootstrap pour styliser ton site -->
+  <title>Portfolio de Nhi</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 class="text-center">Bienvenue sur mon site web</h1>
-  
-  <p class="text-center">Ce site utilise Bootstrap pour avoir un beau design !</p>
 
-    <!-- Ajout d'un bouton avec Bootstrap -->
-    <div class="text-center">
-        <button class="btn btn-primary">Clique ici</button>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" href="#">Portfolio de Nhi</a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item">
+          <a class="nav-link" href="#about">À propos</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#gallery">Galerie</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#contact">Contact</a>
+        </li>
+      </ul>
     </div>
+  </nav>
 
-  <!-- JavaScript de Bootstrap pour ajouter des animations ou des menus -->
+  <!-- Section À propos -->
+  <section id="about" class="text-center my-5">
+    <div class="container">
+      <h1>Bienvenue dans mon portfolio de dessin</h1>
+      <p class="lead">Je m'appelle Nhi, et voici mes créations artistiques. J'adore dessiner et j'utilise diverses techniques pour exprimer mon art.</p>
+    </div>
+  </section>
+
+  <!-- Galerie de dessins -->
+  <section id="gallery" class="container my-5">
+    <h2 class="text-center">Galerie</h2>
+    <div class="row">
+      <!-- Exemple d'image -->
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="image1.jpg" class="card-img-top" alt="Dessins 1">
+          <div class="card-body">
+            <p class="card-text">Description de ton dessin.</p>
+          </div>
+        </div>
+      </div>
+      <!-- Ajoute plus de dessins ici -->
+    </div>
+  </section>
+
+  <!-- Section Contact -->
+  <section id="contact" class="text-center my-5">
+    <div class="container">
+      <h2>Contact</h2>
+      <p>Si vous souhaitez me contacter, envoyez-moi un email à : <strong>nhi@example.com</strong></p>
+    </div>
+  </section>
+
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
 </body>
