--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <section id="about" class="text-center my-5">
     <div class="container">
       <h1>Bienvenue dans mon portfolio de dessin</h1>
-      <p class="lead">Je m'appelle Nhi, et voici mes créations artistiques. J'adore dessiner et j'utilise diverses techniques pour exprimer mon art.</p>
+      <p class="lead">Je m'appelle Nhi, j'ai 25 ans et je voudrais vous présenter mes créations artistiques. J'adore dessiner depuis toujours !</p>
     </div>
   </section>
 
@@ -39,16 +39,38 @@
   <section id="gallery" class="container my-5">
     <h2 class="text-center">Galerie</h2>
     <div class="row">
+
       <!-- Exemple d'image -->
       <div class="col-md-4">
         <div class="card mb-4">
           <img src="image1.jpg" class="card-img-top" alt="Dessins 1">
           <div class="card-body">
-            <p class="card-text">Description de ton dessin.</p>
+            <p class="card-text">Ce n'est pas mon dessin.</p>
           </div>
         </div>
       </div>
+
       <!-- Ajoute plus de dessins ici -->
+
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="image2.png" class="card-img-top" alt="Dessins 2">
+          <div class="card-body">
+            <p class="card-text">C'est une fille aux cheveux violet dans la forêt. Fait en 2023.</p>
+          </div>
+        </div>
+      </div>
+
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="image3.jpg" class="card-img-top" alt="Dessins 3">
+          <div class="card-body">
+            <p class="card-text">C'est un dessin...</p>
+          </div>
+        </div>
+      </div>
+
+
     </div>
   </section>
 
