--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <div class="card mb-4">
           <img src="image3.jpg" class="card-img-top" alt="Dessins 3">
           <div class="card-body">
-            <p class="card-text">C'est un dessin...</p>
+            <p class="card-text">Ce n'est pas un dessin...</p>
           </div>
         </div>
       </div>
