--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
         </div>
       </div>
 
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="image4.png" class="card-img-top" alt="Dessins 3">
+          <div class="card-body">
+            <p class="card-text">C'est un de mes dessins, et c'est Shizuo ! Fait en 2023.</p>
+          </div>
+        </div>
+      </div>
+
 
     </div>
   </section>
