--- a/index.html
+++ b/index.html
@@ -5,12 +5,60 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio de Nhi</title>
   <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <style>
+    /* Style global */
+    body {
+      background-color: #1c1c1c; /* Fond sombre */
+      color: #f0f0f0; /* Texte clair */
+      font-family: 'Arial', sans-serif;
+    }
+
+    h1, h2, p {
+      color: #f0f0f0; /* Texte blanc ou clair */
+    }
+
+    /* Navbar */
+    .navbar {
+      background-color: #333; /* Fond sombre de la barre de navigation */
+    }
+
+    .navbar .nav-link {
+      color: #f0f0f0; /* Couleur des liens dans la navbar */
+    }
+
+    .navbar .nav-link:hover {
+      color: #007bff; /* Couleur au survol */
+    }
+
+    /* Galerie de dessins */
+    .card {
+      background-color: #2b2b2b; /* Fond sombre pour les cartes */
+      border: none; /* Pas de bordures */
+    }
+
+    .card-body {
+      color: #f0f0f0; /* Couleur du texte sur les cartes */
+    }
+
+    .card-img-top {
+      max-height: 300px;
+      object-fit: cover;
+    }
+
+    /* Section Contact */
+    section {
+      padding: 40px 0;
+    }
+
+    #contact a {
+      color: #007bff; /* Lien de contact en bleu */
+    }
+  </style>
 </head>
 <body>
 
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Portfolio de Nhi</a>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
@@ -39,7 +87,6 @@
   <section id="gallery" class="container my-5">
     <h2 class="text-center">Galerie</h2>
     <div class="row">
-
       <!-- Exemple d'image -->
       <div class="col-md-4">
         <div class="card mb-4">
@@ -72,14 +119,12 @@
 
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="image4.png" class="card-img-top" alt="Dessins 3">
+          <img src="image4.png" class="card-img-top" alt="Dessins 4">
           <div class="card-body">
             <p class="card-text">C'est un de mes dessins, et c'est Shizuo ! Fait en 2023.</p>
           </div>
         </div>
       </div>
-
-
     </div>
   </section>
 
@@ -87,7 +132,7 @@
   <section id="contact" class="text-center my-5">
     <div class="container">
       <h2>Contact</h2>
-      <p>Si vous souhaitez me contacter, envoyez-moi un email à : <strong>nhi@example.com</strong></p>
+      <p>Si vous souhaitez me contacter, envoyez-moi un email à : <strong>nhyees21@gmail.com</strong></p>
     </div>
   </section>
 
