--- a/index.html
+++ b/index.html
@@ -8,72 +8,90 @@
   <style>
     /* Style global */
     body {
-      background-color: #1c1c1c; /* Fond sombre */
-      color: #f0f0f0; /* Texte clair */
+      background-color: #1c1c1c;
+      color: #f0f0f0;
       font-family: 'Arial', sans-serif;
     }
-
+    
     h1, h2, p {
-      color: #f0f0f0; /* Texte blanc ou clair */
+      color: #f0f0f0;
     }
 
     /* Navbar */
     .navbar {
-      background-color: #333; /* Fond sombre de la barre de navigation */
+      background-color: #333;
     }
 
     .navbar .nav-link {
-      color: #f0f0f0; /* Couleur des liens dans la navbar */
+      color: #f0f0f0;
     }
 
     .navbar .nav-link:hover {
-      color: #007bff; /* Couleur au survol */
+      color: #007bff;
     }
 
     /* Galerie de dessins */
     .card {
-      background-color: #2b2b2b; /* Fond sombre pour les cartes */
-      border: none; /* Pas de bordures */
+      background-color: #2b2b2b;
+      border: none;
     }
 
     .card-body {
-      color: #f0f0f0; /* Couleur du texte sur les cartes */
+      color: #f0f0f0;
     }
 
     .card-img-top {
       max-height: 300px;
       object-fit: cover;
+      cursor: pointer;
     }
 
-    /* Section Contact */
-    section {
-      padding: 40px 0;
+    /* Lightbox styles */
+    #lightbox {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.9);
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
     }
 
-    #contact a {
-      color: #007bff; /* Lien de contact en bleu */
+    #lightbox img {
+      max-width: 80%;
+      max-height: 80%;
+    }
+
+    #lightbox .close {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+      font-size: 40px;
+      color: white;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
 
-  <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Portfolio de Nhi</a>
-    <div class="collapse navbar-collapse" id="navbarNav">
+<!-- Navbar -->
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" href="index.html">Portfolio de Nhi</a>
+  <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#about">À propos</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#gallery">Galerie</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#contact">Contact</a>
-        </li>
+          <li class="nav-item">
+              <a class="nav-link" href="index.html#about">Mon portfolio</a>
+          </li>
+          <li class="nav-item">
+              <a class="nav-link" href="commandes.html">Commandes</a>
+          </li>
+
       </ul>
-    </div>
-  </nav>
+  </div>
+</nav>
 
   <!-- Section À propos -->
   <section id="about" class="text-center my-5">
@@ -87,44 +105,48 @@
   <section id="gallery" class="container my-5">
     <h2 class="text-center">Galerie</h2>
     <div class="row">
-      <!-- Exemple d'image -->
+      <!-- Exemple d'image 1 -->
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="image1.jpg" class="card-img-top" alt="Dessins 1">
+          <img src="image1.jpg" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
           <div class="card-body">
             <p class="card-text">Ce n'est pas mon dessin.</p>
           </div>
         </div>
       </div>
 
-      <!-- Ajoute plus de dessins ici -->
-
+      <!-- Exemple d'image 2 -->
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="image2.png" class="card-img-top" alt="Dessins 2">
+          <img src="image2.png" class="card-img-top" alt="Dessins 2" onclick="openLightbox(this)">
           <div class="card-body">
             <p class="card-text">C'est une fille aux cheveux violet dans la forêt. Fait en 2023.</p>
           </div>
         </div>
       </div>
 
+      <!-- Exemple d'image 3 -->
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="image3.jpg" class="card-img-top" alt="Dessins 3">
+          <img src="image3.jpg" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
           <div class="card-body">
             <p class="card-text">Ce n'est pas un dessin...</p>
           </div>
         </div>
       </div>
 
+      <!-- Exemple d'image 4 -->
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="image4.png" class="card-img-top" alt="Dessins 4">
+          <img src="image4.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
           <div class="card-body">
             <p class="card-text">C'est un de mes dessins, et c'est Shizuo ! Fait en 2023.</p>
           </div>
         </div>
       </div>
+      
+
+
     </div>
   </section>
 
@@ -135,6 +157,26 @@
       <p>Si vous souhaitez me contacter, envoyez-moi un email à : <strong>nhyees21@gmail.com</strong></p>
     </div>
   </section>
+
+  <!-- Lightbox -->
+  <div id="lightbox" onclick="closeLightbox()">
+    <span class="close">&times;</span>
+    <img id="lightbox-img" src="">
+  </div>
+
+  <script>
+    function openLightbox(image) {
+      var lightbox = document.getElementById('lightbox');
+      var lightboxImg = document.getElementById('lightbox-img');
+      lightboxImg.src = image.src;
+      lightbox.style.display = 'flex';
+    }
+
+    function closeLightbox() {
+      var lightbox = document.getElementById('lightbox');
+      lightbox.style.display = 'none';
+    }
+  </script>
 
   <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.2/dist/js/bootstrap.bundle.min.js"></script>
