--- a/confirmation.html
+++ b/confirmation.html
@@ -36,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-                <a class="nav-link" href="index.html#about">Mon portfolio</a>
+                <a class="nav-link" href="index.html">Mon portfolio</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="commandes.html">Commandes</a>
