--- a/confirmation.html
+++ b/confirmation.html
@@ -32,7 +32,9 @@
 
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="index.html">Portfolio de Nhi</a>
+    <a class="navbar-brand" href="index.html">
+        <img src="logo.png" alt="Portfolio de Nhi" style="height: 40px;">
+    </a>
     <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
             <li class="nav-item">
@@ -41,10 +43,10 @@
             <li class="nav-item">
                 <a class="nav-link" href="commandes.html">Commandes</a>
             </li>
-
         </ul>
     </div>
 </nav>
+
 
 <div class="confirmation-container">
     <h1>Commande envoyée !</h1>
