--- a/index.html
+++ b/index.html
@@ -98,8 +98,8 @@
   <!-- Section À propos -->
   <section id="about" class="text-center my-5">
     <div class="container">
-      <h1>Bienvenue dans mon portfolio de dessin</h1>
-      <p class="lead">Je m'appelle Nhi, j'ai 25 ans et je voudrais vous présenter mes créations artistiques. J'adore dessiner depuis toujours !</p>
+      <h1>Bienvenue dans mon portfolio</h1>
+      <p class="lead">Je m'appelle Nhi, j'ai 25 ans, et j'ai créé ce portfolio pour vous présenter mes créations artistiques. J'adore dessiner depuis toujours.</p>
     </div>
   </section>
 
