--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
   <section id="about" class="text-center my-5">
     <div class="container">
       <h1>Bienvenue dans mon portfolio</h1>
-      <p class="lead">Je m'appelle Nhi, j'ai 25 ans, et j'ai créé ce portfolio pour vous présenter mes créations artistiques. J'adore dessiner depuis toujours.</p>
+      <p class="lead">Je m'appelle Nhi et j'ai 25 ans. J'adore dessiner et j'ai créé ce portfolio pour vous présenter mes créations artistiques.</p>
     </div>
   </section>
 
