--- a/index.html
+++ b/index.html
@@ -107,12 +107,13 @@
   <section id="gallery" class="container my-5">
     <h2 class="text-center">Galerie</h2>
     <div class="row">
+      
       <!-- Exemple d'image 1 -->
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="image1.jpg" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <img src="galerie/nouvel_an.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
           <div class="card-body">
-            <p class="card-text">Ce n'est pas mon dessin.</p>
+            <p class="card-text">C'est un dessin de deux personnages représentant Julien et moi !</p>
           </div>
         </div>
       </div>
@@ -120,9 +121,9 @@
       <!-- Exemple d'image 2 -->
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="image2.png" class="card-img-top" alt="Dessins 2" onclick="openLightbox(this)">
+          <img src="galerie/japon.png" class="card-img-top" alt="Dessins 2" onclick="openLightbox(this)">
           <div class="card-body">
-            <p class="card-text">C'est une fille aux cheveux violet dans la forêt. Fait en 2023.</p>
+            <p class="card-text">C'est une fille avec son arme !</p>
           </div>
         </div>
       </div>
@@ -130,9 +131,9 @@
       <!-- Exemple d'image 3 -->
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="image3.jpg" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <img src="galerie/shizuo.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
           <div class="card-body">
-            <p class="card-text">Ce n'est pas un dessin...</p>
+            <p class="card-text">C'est Shizuo !</p>
           </div>
         </div>
       </div>
@@ -140,12 +141,54 @@
       <!-- Exemple d'image 4 -->
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="image4.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <img src="galerie/limule.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
           <div class="card-body">
-            <p class="card-text">C'est un de mes dessins, et c'est Shizuo ! Fait en 2023.</p>
+            <p class="card-text">C'est un personnage fictif ressemblant à Limule !</p>
           </div>
         </div>
       </div>
+
+      <!-- Exemple d'image 5 -->
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="galerie/miyuki.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <div class="card-body">
+            <p class="card-text">C'est un personnage fictif : Une fille aux cheveux violet dans la fotêt !</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Exemple d'image 6 -->
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="galerie/le_petit_poisson.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <div class="card-body">
+            <p class="card-text">C'est un petit poisson dans l'océan !</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Exemple d'image 7 -->
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="galerie/lapino.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <div class="card-body">
+            <p class="card-text">C'est un lapin !</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Exemple d'image 8 -->
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="galerie/skin_amq.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <div class="card-body">
+            <p class="card-text">C'est un skin imaginaire pour amq !</p>
+          </div>
+        </div>
+      </div>
+
+
       
 
 
