--- a/commandes.html
+++ b/commandes.html
@@ -65,7 +65,7 @@
             </div>
             <div class="card-body text-center">
               <p class="card-text">Un dessin personnalisé pour votre photo de profil !</p>
-              <p class="card-text"><strong>Prix : 20 CHF</strong></p>
+              <p class="card-text"><strong>Prix : 5 CHF</strong></p>
               <button class="btn btn-primary" onclick="openOrderForm('photo de profil', 20)">Commander</button>
             </div>
           </div>
@@ -78,8 +78,8 @@
               <h3>Dessin Manga</h3>
             </div>
             <div class="card-body text-center">
-              <p class="card-text">Obtenez votre personnage dans un style manga unique !</p>
-              <p class="card-text"><strong>Prix : 50 CHF</strong></p>
+              <p class="card-text">Un dessin dans un style manga !</p>
+              <p class="card-text"><strong>Prix : 10 CHF</strong></p>
               <button class="btn btn-primary" onclick="openOrderForm('dessin manga', 50)">Commander</button>
             </div>
           </div>
