--- a/commandes.html
+++ b/commandes.html
@@ -50,7 +50,7 @@
 
 
   <div class="container">
-    <h1 class="text-center my-5">Commandes de dessins</h1>
+    <h1 class="text-center my-5">Commande de dessins</h1>
 
     <!-- Section Commandes -->
     <section id="orders" class="container my-5">
