--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
       <!-- Exemple d'image 2 -->
       <div class="col-md-4">
         <div class="card mb-4">
-          <img src="galerie/miyuki.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <img src="galerie/limule.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
           <div class="card-body">
-            <p class="card-text">C'est un personnage fictif : Une fille aux cheveux violet dans la fotêt !</p>
+            <p class="card-text">C'est un personnage fictif ressemblant à Limule !</p>
           </div>
         </div>
       </div>
@@ -139,11 +139,11 @@
       </div>
 
       <!-- Exemple d'image 4 -->
-      <div class="col-md-4">
+      <div class="col-md-4"></div>
         <div class="card mb-4">
-          <img src="galerie/limule.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <img src="galerie/miyuki.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
           <div class="card-body">
-            <p class="card-text">C'est un personnage fictif ressemblant à Limule !</p>
+            <p class="card-text">C'est un personnage fictif : Une fille aux cheveux violet dans la fotêt !</p>
           </div>
         </div>
       </div>
