--- a/index.html
+++ b/index.html
@@ -118,9 +118,6 @@
         </div>
       </div>
 
-      <!-- Exemple d'image 2 -->
-
-
       <!-- Exemple d'image 3 -->
       <div class="col-md-4">
         <div class="card mb-4">
@@ -147,6 +144,16 @@
           <img src="galerie/japon.png" class="card-img-top" alt="Dessins 2" onclick="openLightbox(this)">
           <div class="card-body">
             <p class="card-text">C'est une fille avec son arme !</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Exemple d'image 2 -->
+      <div class="col-md-4">
+        <div class="card mb-4">
+          <img src="galerie/miyuki.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
+          <div class="card-body">
+            <p class="card-text">C'est un personnage fictif : Une fille aux cheveux violet dans la fotêt !</p>
           </div>
         </div>
       </div>
