--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
   <a class="navbar-brand" href="index.html">
-      <img src="logo.png" alt="Portfolio de Nhi" style="height: 40px;">
+      <img src="logo.png" alt="Portfolio de Luchia" style="height: 40px;">
   </a>
   <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
@@ -98,7 +98,7 @@
   <!-- Section À propos -->
   <section id="about" class="text-center my-5">
     <div class="container">
-      <h1>Bienvenue dans mon portfolio</h1>
+      <h1>Bienvenue dans le portfolio de Luchia</h1>
       <p class="lead">Je m'appelle Nhi et j'ai 25 ans. J'adore dessiner et j'ai créé ce portfolio pour vous présenter mes créations artistiques.</p>
     </div>
   </section>
