--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
   <!-- Section À propos -->
   <section id="about" class="text-center my-5">
     <div class="container">
-      <h1>Bienvenue dans le portfolio de Luchia</h1>
+      <h1>Portfolio de Luchia</h1>
       <p class="lead">Je m'appelle Nhi et j'ai 25 ans. J'adore dessiner et j'ai créé ce portfolio pour vous présenter mes créations artistiques.</p>
     </div>
   </section>
@@ -123,7 +123,7 @@
         <div class="card mb-4">
           <img src="galerie/shizuo.png" class="card-img-top" alt="Dessins 1" onclick="openLightbox(this)">
           <div class="card-body">
-            <p class="card-text">C'est Shizuo !</p>
+            <p class="card-text">C'est Shizuo de DRRR!!</p>
           </div>
         </div>
       </div>
