--- a/commandes.html
+++ b/commandes.html
@@ -50,11 +50,11 @@
 
 
   <div class="container">
-    <h1 class="text-center my-5">Commande de dessins</h1>
+    <h1 class="text-center my-5">Commande</h1>
 
     <!-- Section Commandes -->
     <section id="orders" class="container my-5">
-      <h2 class="text-center">Choisissez votre type de dessin</h2>
+      <h2 class="text-center">Choisissez votre type</h2>
       <div class="row">
 
         <!-- Carte pour "Photo de Profil" -->
